--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,11 +6,11 @@ updates:
     schedule:
       interval: "weekly"
     assignees:
-      - "serfriz"
+      - "danielkinahan"
   # Check for Docker image updates
   - package-ecosystem: "docker"
-    directory: "/caddy-cloudflare"
+    directory: "/caddy-porkbun"
     schedule:
       interval: "daily"
     assignees:
-      - "serfriz"
+      - "danielkinahan"
