--- a/.github/workflows/build.caddy-porkbun.yml
+++ b/.github/workflows/build.caddy-porkbun.yml
@@ -28,7 +28,7 @@ jobs:
       version: ${{ steps.version.outputs.version }}
       labels: ${{ steps.metadata.outputs.labels }}
       tags: ${{ steps.metadata.outputs.tags }}
-      platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7,linux/arm/v6
+      platforms: linux/amd64
 
     steps:
       - name: Checkout repository
@@ -74,11 +74,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Repository
         uses: docker/login-action@v3
@@ -87,12 +87,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      - name: Login to Quay Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: quay.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.QUAY_TOKEN }}
+      # - name: Login to Quay Container Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: quay.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.QUAY_TOKEN }}
 
       - name: Build and publish container image
         uses: docker/build-push-action@v6
